--- a/FindMe.Web.Bo/Views/App/Index.cshtml
+++ b/FindMe.Web.Bo/Views/App/Index.cshtml
@@ -106,6 +106,7 @@
                         lbl_Dstrcts: '@Html.GetLabel("lbl_Dstrcts")',
                         lbl_Grps: '@Html.GetLabel("lbl_Grps")',
                         lbl_CtsRgnsDstrctsGrps: '@Html.GetLabel("lbl_CtsRgnsDstrctsGrps")',
+                        lbl_Icon: '@Html.GetLabel("lbl_Icon")',
 
                         erMsg_InvldEmail: '@Html.GetMessage("erMsg_InvldEmail")',
 
