--- a/FindMe.Web.Bo/Views/App/Index.cshtml
+++ b/FindMe.Web.Bo/Views/App/Index.cshtml
@@ -53,7 +53,7 @@
                .value('appProps',
                     {
                         resultItemsPerPg: @(BaseController.SEARCH_RESULT_ITEMS_PER_PAGE),
-                        currentLang: '@Html.GetCurrentLang()',
+                        currentLang: ('@Html.GetCurrentLang()').encodeHtml(),
 
                         urlMngProfile: '@Url.Action("ManageProfile", "ApiAccount")',
                         urlCheckEmailToken: '@Url.Action("IsEmailValidationTokenConfirmed", "ApiAccount")',
@@ -64,64 +64,68 @@
                         urlGetCitys: '@Url.Action("GetClients", "ApiAddress")',
                         urlGetRegions: '@Url.Action("GetRegions", "ApiRegion")',
                         urlSaveRegions: '@Url.Action("SaveRegions", "ApiRegion")',
-                        urlGetDistricts: '@Url.Action("GetClients", "ApiAddress")',
-                        urlGetCityGroups: '@Url.Action("GetClients", "ApiAddress")',
+                        urlGetDistricts: '@Url.Action("GetDistricts", "ApiDistrict")',
+                        urlSaveDistricts: '@Url.Action("SaveDistricts", "ApiDistrict")',
+                        urlGetCityGroups: '@Url.Action("GetCityGroups", "ApiCityGroup")',
+                        urlSaveCityGroups: '@Url.Action("SaveCityGroups", "ApiCityGroup")',
 
-                        lbl_Name: '@Html.GetLabel("lbl_Name")',
-                        lbl_FullName: '@Html.GetLabel("lbl_FullName")',
-                        lbl_LglName: '@Html.GetLabel("lbl_LglName")',
-                        lbl_Actns: '@Html.GetLabel("lbl_Actns")',
-                        lbl_Actv: '@Html.GetLabel("lbl_Actv")',
-                        lbl_PdClnt: '@Html.GetLabel("lbl_PdClnt")',
-                        lbl_ID: '@Html.GetLabel("lbl_ID")',
-                        lbl_FName: '@Html.GetLabel("lbl_FName")',
-                        lbl_LName: '@Html.GetLabel("lbl_LName")',
-                        lbl_Email: '@Html.GetLabel("lbl_Email")',
-                        lbl_Usrnm: '@Html.GetLabel("lbl_Usrnm")',
-                        lbl_CntctNm: '@Html.GetLabel("lbl_CntctNm")',
-                        lbl_LckOut: '@Html.GetLabel("lbl_LckOut")',
-                        lbl_Prfl: '@Html.GetLabel("lbl_Prfl")',
-                        lbl_ReSnd: '@Html.GetLabel("lbl_ReSnd")',
-                        lbl_CnclCnfrmtn: '@Html.GetLabel("lbl_CnclCnfrmtn")',
-                        lbl_Clnts: '@Html.GetLabel("lbl_Clnts")',
-                        lbl_Pgs: '@Html.GetLabel("lbl_Pgs")',
-                        lbl_Pg: '@Html.GetLabel("lbl_Pg")',
-                        lbl_of: '@Html.GetLabel("lbl_of")',
-                        lbl_TtlClnts: '@Html.GetLabel("lbl_TtlClnts")',
-                        lbl_Edit: '@Html.GetLabel("lbl_Edit")',
-                        lbl_Delete: '@Html.GetLabel("lbl_Delete")',
-                        lbl_Save: '@Html.GetLabel("lbl_Save")',
-                        lbl_Cancel: '@Html.GetLabel("lbl_Cancel")',
-                        lbl_Desc: '@Html.GetLabel("lbl_Desc")',
-                        lbl_Cvlty: '@Html.GetLabel("lbl_Cvlty")',
-                        lbl_Yes: '@Html.GetLabel("lbl_Yes")',
-                        lbl_No: '@Html.GetLabel("lbl_No")',
-                        lbl_Categories: '@Html.GetLabel("lbl_Categories")',
-                        lbl_Slug: '@Html.GetLabel("lbl_Slug")',
-                        lbl_SbCatgs: '@Html.GetLabel("lbl_SbCatgs")',
-                        lbl_ShwSbCatgs: '@Html.GetLabel("lbl_ShwSbCatgs")',
-                        lbl_Back: '@Html.GetLabel("lbl_Back")',
-                        lbl_Cities: '@Html.GetLabel("lbl_Cities")',
-                        lbl_Rgns: '@Html.GetLabel("lbl_Rgns")',
-                        lbl_Dstrcts: '@Html.GetLabel("lbl_Dstrcts")',
-                        lbl_Grps: '@Html.GetLabel("lbl_Grps")',
-                        lbl_CtsRgnsDstrctsGrps: '@Html.GetLabel("lbl_CtsRgnsDstrctsGrps")',
-                        lbl_Icon: '@Html.GetLabel("lbl_Icon")',
+                        lbl_Name: ('@Html.GetLabel("lbl_Name")').encodeHtml(),
+                        lbl_FullName: ('@Html.GetLabel("lbl_FullName")').encodeHtml(),
+                        lbl_LglName: ('@Html.GetLabel("lbl_LglName")').encodeHtml(),
+                        lbl_Actns: ('@Html.GetLabel("lbl_Actns")').encodeHtml(),
+                        lbl_Actv: ('@Html.GetLabel("lbl_Actv")').encodeHtml(),
+                        lbl_PdClnt: ('@Html.GetLabel("lbl_PdClnt")').encodeHtml(),
+                        lbl_ID: ('@Html.GetLabel("lbl_ID")').encodeHtml(),
+                        lbl_FName: ('@Html.GetLabel("lbl_FName")').encodeHtml(),
+                        lbl_LName: ('@Html.GetLabel("lbl_LName")').encodeHtml(),
+                        lbl_Email: ('@Html.GetLabel("lbl_Email")').encodeHtml(),
+                        lbl_Usrnm: ('@Html.GetLabel("lbl_Usrnm")').encodeHtml(),
+                        lbl_CntctNm: ('@Html.GetLabel("lbl_CntctNm")').encodeHtml(),
+                        lbl_LckOut: ('@Html.GetLabel("lbl_LckOut")').encodeHtml(),
+                        lbl_Prfl: ('@Html.GetLabel("lbl_Prfl")').encodeHtml(),
+                        lbl_ReSnd: ('@Html.GetLabel("lbl_ReSnd")').encodeHtml(),
+                        lbl_CnclCnfrmtn: ('@Html.GetLabel("lbl_CnclCnfrmtn")').encodeHtml(),
+                        lbl_Clnts: ('@Html.GetLabel("lbl_Clnts")').encodeHtml(),
+                        lbl_Pgs: ('@Html.GetLabel("lbl_Pgs")').encodeHtml(),
+                        lbl_Pg: ('@Html.GetLabel("lbl_Pg")').encodeHtml(),
+                        lbl_of: ('@Html.GetLabel("lbl_of")').encodeHtml(),
+                        lbl_TtlRows: ('@Html.GetLabel("lbl_TtlRows")').encodeHtml(),
+                        lbl_Edit: ('@Html.GetLabel("lbl_Edit")').encodeHtml(),
+                        lbl_Delete: ('@Html.GetLabel("lbl_Delete")').encodeHtml(),
+                        lbl_Save: ('@Html.GetLabel("lbl_Save")').encodeHtml(),
+                        lbl_Cancel: ('@Html.GetLabel("lbl_Cancel")').encodeHtml(),
+                        lbl_Desc: ('@Html.GetLabel("lbl_Desc")').encodeHtml(),
+                        lbl_Cvlty: ('@Html.GetLabel("lbl_Cvlty")').encodeHtml(),
+                        lbl_Yes: ('@Html.GetLabel("lbl_Yes")').encodeHtml(),
+                        lbl_No: ('@Html.GetLabel("lbl_No")').encodeHtml(),
+                        lbl_Categories: ('@Html.GetLabel("lbl_Categories")').encodeHtml(),
+                        lbl_Slug: ('@Html.GetLabel("lbl_Slug")').encodeHtml(),
+                        lbl_SbCatgs: ('@Html.GetLabel("lbl_SbCatgs")').encodeHtml(),
+                        lbl_ShwSbCatgs: ('@Html.GetLabel("lbl_ShwSbCatgs")').encodeHtml(),
+                        lbl_Back: ('@Html.GetLabel("lbl_Back")').encodeHtml(),
+                        lbl_Cities: ('@Html.GetLabel("lbl_Cities")').encodeHtml(),
+                        lbl_Rgns: ('@Html.GetLabel("lbl_Rgns")').encodeHtml(),
+                        lbl_Dstrcts: ('@Html.GetLabel("lbl_Dstrcts")').encodeHtml(),
+                        lbl_Grps: ('@Html.GetLabel("lbl_Grps")').encodeHtml(),
+                        lbl_CtsRgnsDstrctsGrps: ('@Html.GetLabel("lbl_CtsRgnsDstrctsGrps")').encodeHtml(),
+                        lbl_Icon: ('@Html.GetLabel("lbl_Icon")').encodeHtml(),
+                        lbl_Lat: ('@Html.GetLabel("lbl_Lat")').encodeHtml(),
+                        lbl_Lon: ('@Html.GetLabel("lbl_Lon")').encodeHtml(),
 
-                        erMsg_InvldEmail: '@Html.GetMessage("erMsg_InvldEmail")',
+                        erMsg_InvldEmail: ('@Html.GetMessage("erMsg_InvldEmail")').encodeHtml(),
 
-                        msg_RfrshPrfl: '@Html.GetMessage("msg_RfrshPrfl")',
-                        msg_SavePrfl: '@Html.GetMessage("msg_SavePrfl")',
-                        msg_WtngEmailCnfrmtn: '@Html.GetMessage("msg_WtngEmailCnfrmtn")',
-                        msg_AddClnts: '@Html.GetMessage("msg_AddClnts")',
-                        msg_RfrshClnts: '@Html.GetMessage("msg_RfrshClnts")',
-                        msg_SaveClnts: '@Html.GetMessage("msg_SaveClnts")',
-                        msg_AddCatgs: '@Html.GetMessage("msg_AddCatgs")',
-                        msg_RfrshCatgs: '@Html.GetMessage("msg_RfrshCatgs")',
-                        msg_SaveCatgs: '@Html.GetMessage("msg_SaveCatgs")',
-                        msg_SHwRgnsCtys: '@Html.GetMessage("msg_SHwRgnsCtys")',
-                        msg_SHwDstrctsCtys: '@Html.GetMessage("msg_SHwDstrctsCtys")',
-                        msg_SHwGrpsCtys: '@Html.GetMessage("msg_SHwGrpsCtys")'
+                        msg_RfrshPrfl: ('@Html.GetMessage("msg_RfrshPrfl")').encodeHtml(),
+                        msg_SavePrfl: ('@Html.GetMessage("msg_SavePrfl")').encodeHtml(),
+                        msg_WtngEmailCnfrmtn: ('@Html.GetMessage("msg_WtngEmailCnfrmtn")').encodeHtml(),
+                        msg_AddClnts: ('@Html.GetMessage("msg_AddClnts")').encodeHtml(),
+                        msg_RfrshClnts: ('@Html.GetMessage("msg_RfrshClnts")').encodeHtml(),
+                        msg_SaveClnts: ('@Html.GetMessage("msg_SaveClnts")').encodeHtml(),
+                        msg_AddCatgs: ('@Html.GetMessage("msg_AddCatgs")').encodeHtml(),
+                        msg_RfrshCatgs: ('@Html.GetMessage("msg_RfrshCatgs")').encodeHtml(),
+                        msg_SaveCatgs: ('@Html.GetMessage("msg_SaveCatgs")').encodeHtml(),
+                        msg_SHwRgnsCtys: ('@Html.GetMessage("msg_SHwRgnsCtys")').encodeHtml(),
+                        msg_SHwDstrctsCtys: ('@Html.GetMessage("msg_SHwDstrctsCtys")').encodeHtml(),
+                        msg_SHwGrpsCtys: ('@Html.GetMessage("msg_SHwGrpsCtys")').encodeHtml()
         });
     </script>
 
