--- a/FindMe.Web.Bo/Views/App/Index.cshtml
+++ b/FindMe.Web.Bo/Views/App/Index.cshtml
@@ -61,13 +61,15 @@
                         urlSaveClients: '@Url.Action("SaveClients", "ApiAddress")',
                         urlGetCatgs: '@Url.Action("GetCatgs", "ApiCatg")',
                         urlSaveCatgs: '@Url.Action("SaveCatgs", "ApiCatg")',
-                        urlGetCitys: '@Url.Action("GetClients", "ApiAddress")',
-                        urlGetRegions: '@Url.Action("GetRegions", "ApiRegion")',
-                        urlSaveRegions: '@Url.Action("SaveRegions", "ApiRegion")',
-                        urlGetDistricts: '@Url.Action("GetDistricts", "ApiDistrict")',
-                        urlSaveDistricts: '@Url.Action("SaveDistricts", "ApiDistrict")',
-                        urlGetCityGroups: '@Url.Action("GetCityGroups", "ApiCityGroup")',
-                        urlSaveCityGroups: '@Url.Action("SaveCityGroups", "ApiCityGroup")',
+                        urlGetCityDetails: '@Url.Action("GetCityDetails", "ApiCity")',
+                        urlSaveCityDetails: '@Url.Action("SaveCityDetails", "ApiCity")',
+                        urlGetRegions: '@Url.Action("GetRegions", "ApiCity")',
+                        urlSaveRegions: '@Url.Action("SaveRegions", "ApiCity")',
+                        urlGetDistricts: '@Url.Action("GetDistricts", "ApiCity")',
+                        urlSaveDistricts: '@Url.Action("SaveDistricts", "ApiCity")',
+                        urlGetCityGroups: '@Url.Action("GetCityGroups", "ApiCity")',
+                        urlSaveCityGroups: '@Url.Action("SaveCityGroups", "ApiCity")',
+                        urlGetAllCityStuff: '@Url.Action("GetAllCityStuff", "ApiCity")',
 
                         lbl_Name: ('@Html.GetLabel("lbl_Name")').encodeHtml(),
                         lbl_FullName: ('@Html.GetLabel("lbl_FullName")').encodeHtml(),
@@ -111,6 +113,12 @@
                         lbl_Icon: ('@Html.GetLabel("lbl_Icon")').encodeHtml(),
                         lbl_Lat: ('@Html.GetLabel("lbl_Lat")').encodeHtml(),
                         lbl_Lon: ('@Html.GetLabel("lbl_Lon")').encodeHtml(),
+                        lbl_Region: ('@Html.GetLabel("lbl_Region")').encodeHtml(),
+                        lbl_District: ('@Html.GetLabel("lbl_District")').encodeHtml(),
+                        lbl_CityGroup: ('@Html.GetLabel("lbl_CityGroup")').encodeHtml(),
+                        lbl_CityFrRgn: ('@Html.GetLabel("lbl_CityFrRgn")').encodeHtml(),
+                        lbl_CityFrDst: ('@Html.GetLabel("lbl_CityFrDst")').encodeHtml(),
+                        lbl_CityFrGrp: ('@Html.GetLabel("lbl_CityFrGrp")').encodeHtml(),
 
                         erMsg_InvldEmail: ('@Html.GetMessage("erMsg_InvldEmail")').encodeHtml(),
 
