--- a/FindMe.Web.Bo/wwwroot/Views/App/Admin/Categories.html
+++ b/FindMe.Web.Bo/wwwroot/Views/App/Admin/Categories.html
@@ -48,7 +48,7 @@
         <tr>
             <td class="findme-color-fc-pink">
                 <span>{{vm.appProps.lbl_Pg}}: {{vm.currentPgNmbr + 1}} {{vm.appProps.lbl_of}} {{vm.totalPgs}}</span>
-                &nbsp;&nbsp;<b>{{vm.appProps.lbl_TtlRows}}: {{vm.categorysCount}}</b>
+                &nbsp;&nbsp;<b>{{vm.appProps.lbl_TtlRows}}: {{vm.categorysCount + vm.categorysCountMod}}</b>
             </td>
         </tr>
         <tr>
