--- a/FindMe.Web.Bo/wwwroot/Views/App/Admin/Clients.html
+++ b/FindMe.Web.Bo/wwwroot/Views/App/Admin/Clients.html
@@ -41,7 +41,7 @@
         <tr>
             <td class="findme-color-fc-pink">
                 <span>{{vm.appProps.lbl_Pg}}: {{vm.currentPgNmbr + 1}} {{vm.appProps.lbl_of}} {{vm.totalPgs}}</span>
-                &nbsp;&nbsp;<b>{{vm.appProps.lbl_TtlRows}}: {{vm.clientsCount}}</b>
+                &nbsp;&nbsp;<b>{{vm.appProps.lbl_TtlRows}}: {{vm.clientsCount + vm.clientsCountMod}}</b>
             </td>
         </tr>
         <tr>
